--- a/Assets/packages.config
+++ b/Assets/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" />
+  <package id="Newtonsoft.Json" version="13.0.1" />
   <package id="SocketIOClient" version="3.0.6" />
   <package id="System.Buffers" version="4.5.1" />
   <package id="System.Memory" version="4.5.4" />
